--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -185,6 +185,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isMulThree(n):\n",
+    "    return n % 3 == 0\n",
+    "def isMulFive(n):\n",
+    "    return n % 5 == 0\n",
+    "\n",
+    "sum(list([i for i in range(1,100001) if isMulThree(i) or isMulFive(i)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -209,10 +223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#훨씬 깔끄밍\n",
+    "def one_count(n):\n",
+    "    a = 0\n",
+    "    for i in range(n):\n",
+    "        if \"1\" in str(i):\n",
+    "            a += 1\n",
+    "    return a"
+   ]
   },
   {
    "cell_type": "code",
@@ -254,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
