feat: reviewed by 200

--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88988,7 +88988,7 @@
     "    for j in range(len(numlist)):\n",
     "        print(numlist[j], end=\" \")\n",
     "    a = numlist[0]\n",
-    "    for j in range(len(numlist)):\n",
+    "    for j in range(len(numlist4\n",
     "        if j <= len(numlist) - 2:\n",
     "            numlist[j] = numlist[j+ 1]\n",
     "        else:\n",
