--- a/problems-review/188~200.ipynb
+++ b/problems-review/188~200.ipynb
@@ -109,6 +109,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#더 짧당\n",
+    "sentence = input(\"Enter the sentence\")\n",
+    "for i in range(len(sentence)):\n",
+    "    print(sentence[0:i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
