--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,84 +20,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = input(\"Enter the number: \")\n",
+    "numlist = numbers.split(\" \")\n",
+    "for i in range(len(numlist)):\n",
+    "    numlist[i] = int(numlist[i])\n",
+    "    \n",
+    "for i in range(len(numlist)):\n",
+    "    for j in range(len(numlist)):\n",
+    "        print(numlist[j], end=\" \")\n",
+    "    a = numlist[0]\n",
+    "    for j in range(len(numlist)):\n",
+    "        if j <= len(numlist) - 2:\n",
+    "            numlist[j] = numlist[j+ 1]\n",
+    "        else:\n",
+    "            numlist[j] = a\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert numbers: 34 15 2 64 194 7\n"
+      "5.7\n"
      ]
     }
    ],
    "source": [
-    "n = input(\"insert numbers: \").split(\" \")"
+    "print(round(random.random()*10,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['34', '15', '2', '64', '194', '7']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentenceMerry Christmas\n"
+     ]
     }
    ],
    "source": [
-    "n"
+    "sentence = input(\"Enter the sentence\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1333"
+       "'Me'"
       ]
      },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n = input(\"insert numbers: \").split(\" \")\n",
-    "\n",
-    "a = \"\"\n",
-    "for i in n:\n",
-    "    a += i\n",
-    "\n",
-    "\n",
-    "b = []\n",
-    "for i in range(len(str(a))//3 + 1):\n",
-    "    b.append(a[3*i:3+(3*i)])\n",
-    "\n",
-    "sum(map(int,b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,14 +109,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\n",
+      "Me\n",
+      "Mer\n",
+      "Merr\n",
+      "Merry\n",
+      "Merry \n",
+      "Merry C\n",
+      "Merry Ch\n",
+      "Merry Chr\n",
+      "Merry Chri\n",
+      "Merry Chris\n",
+      "Merry Christ\n",
+      "Merry Christm\n",
+      "Merry Christma\n",
+      "Merry Christmas\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = input(\"Enter the sentence\")\n",
+    "for i in range(len(sentence)):\n",
+    "    print(sentence[0:i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = random.randrange(1, 101)\n",
-    "\n",
-    "while True:\n"
+    "def is_prime(n):\n",
+    "    a = []\n",
+    "    for i in range(1,n+1):\n",
+    "        if n % i == 0:\n",
+    "            a.append(i)\n",
+    "    if len(a) == 2:\n",
+    "        return True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = []\n",
+    "for i in range(1,144):\n",
+    "    if 143 % i == 0:\n",
+    "        b.append(i)\n",
+    "\n",
+    "if is_prime(b[1]) and is_prime(b[2]) == True:\n",
+    "    print(b[1],b[2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "495"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "for i in range(24):\n",
+    "    for j in range(60):\n",
+    "        three = str(i) + str(j)\n",
+    "        if \"3\" in three:\n",
+    "            a += 1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
