--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -90,6 +90,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcd(n, m):\n",
+    "\n",
+    "    a = [i for i in range(1,n+1) if i % n == 0]\n",
+    "    b = [i for i in range(1,m+1) if i % n == 0]\n",
+    "    \n",
+    "    return max(list(set(a) & set(b)))\n",
+    "def lcm(n, m):\n",
+    "    return n * m / gcd(n,m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
