feat: added string_sort_descending

--- a/fun_coding/Programmers/문자열 내림차순으로 배치하기.ipynb
+++ b/fun_coding/Programmers/문자열 내림차순으로 배치하기.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#다른사람 풀이, sorted를 사용하면된다. 짧음\n",
+    "#다른사람 풀이, sorted를 사용하면 된다. \n",
     "def solution(s):\n",
     "    return ''.join(sorted(s, reverse=True))"
    ]
