feat: added_김서방_찾기

--- a/fun_coding/Programmers/Untitled.ipynb
+++ b/fun_coding/Programmers/Untitled.ipynb
@@ -4,8 +4,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"/imgs/문자열_내림차순.png\" width=\"100%\">"
+    "<img src=\".././imgs/김서방_찾기.png\" width=\"40%\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(seoul):\n",
+    "    answer = ''\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 내풀이\n",
+    "seoul = [\"Jane\", \"Kim\"]\n",
+    "def solution(seoul):\n",
+    "    a = {k:i for i,k in enumerate(seoul)}\n",
+    "    b = a[\"Kim\"]\n",
+    "    return \"김서방은 {}에 있다\".format(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른사람 풀이!!\n",
+    "\n",
+    "# 문제가 개편 되었습니다. 이로 인해 함수 구성이 변경되어, 과거의 코드는 동작하지 않을 수 있습니다.\n",
+    "# 새로운 함수 구성을 적용하려면 [코드 초기화] 버튼을 누르세요. 단, [코드 초기화] 버튼을 누르면 작성 중인 코드는 사라집니다.\n",
+    "def findKim(seoul):\n",
+    "    return \"김서방은 {}에 있다\".format(seoul.index('Kim'))\n",
+    "\n",
+    "\n",
+    "# 실행을 위한 테스트코드입니다.\n",
+    "print(findKim([\"Queen\", \"Tod\", \"Kim\"]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
