--- a/fun_coding/Programmers/Untitled.ipynb
+++ b/fun_coding/Programmers/Untitled.ipynb
@@ -25,46 +25,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = \"aabbaccc\""
+    "s = \"ababcdcdababcdcd\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['a', 'a', 'b', 'b', 'a', 'c', 'c', 'c'],\n",
-       " ['aa', 'bb', 'ac', 'cc'],\n",
-       " ['aab', 'bac'],\n",
-       " ['aabb', 'accc']]"
+       "16"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "len(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 2 3 4 5 6 7 8 9\n",
+    "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "a = []\n",
     "for i in range(1,(len(s)//2)+1):\n",
     "    b = []\n",
     "    for j in range(len(s)):\n",
     "        if i*j+i <= len(s):\n",
-    "            b.append(s[i*j:j*i+i])\n",
-    "    a.append(b)\n",
-    "a"
+    "            b.append(s[i*j:i*j+i])\n",
+    "        else:\n",
+    "            if s[i*j:] != \"\":\n",
+    "                b.append(s[i*j:])\n",
+    "    a.append(b)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,74 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1a1ba11c', 'aabbaccc', 'aabbac', 'aabbaccc']"
+       "['ababcdcdababcdcd',\n",
+       " '1ab1cd1ab1cd',\n",
+       " 'ababcdcdababcdcd',\n",
+       " 'ababcdcdababcdcd',\n",
+       " 'ababcdcdababcdcd',\n",
+       " 'ababcdcdababcdcd',\n",
+       " 'ababcdcdababcdcd',\n",
+       " '1ababcdcd']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a[0][4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[1].remove(a[1][1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['a', 'a', 'b', 'b', 'a', 'c', 'c', 'c'],\n",
-       " ['aa', 'ac', 'cc'],\n",
-       " ['aab', 'bac'],\n",
-       " ['aabb', 'accc']]"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
    ]
   },
   {
