--- a/fun_coding/Linked_list.ipynb
+++ b/fun_coding/Linked_list.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "class Linked_list:\n",
     "    \n",
-    "    def __init__(self,):\n",
+    "    def __init__(self):\n",
     "        self.head = None\n",
     "        self.tail = None\n",
     "        self.d_size = 0\n",
@@ -121,7 +121,7 @@
     "            # 데이터가 하나일 때\n",
     "            if self.size() == 1:\n",
     "                self.head = None\n",
-    "                self.taile = None\n",
+    "                self.tail = None\n",
     "            # 데이터가 두 개 이상일 때\n",
     "            else:\n",
     "                self.head = self.head.next #head를 다음 노드로 옮김. \n",
