--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -2,269 +2,137 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import statistics\n",
-    "import random"
+    "class Node:\n",
+    "    def __init__(self, data = None):\n",
+    "        self.__data = data\n",
+    "        self.__next = None\n",
+    "        \n",
+    "    def __del__(self):\n",
+    "        print(\"data of {} is deleted\".format(self.data))\n",
+    "        \n",
+    "    @property\n",
+    "    def data(self):\n",
+    "        return self.__data\n",
+    "    \n",
+    "    @data.setter\n",
+    "    def data(self, data):\n",
+    "        self.__data = data\n",
+    "        \n",
+    "    @property\n",
+    "    def next(self):\n",
+    "            return self.__next\n",
+    "        \n",
+    "    @next.setter\n",
+    "    def next(self, n):\n",
+    "        self.__next = n\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numbers = input(\"Enter the number: \")\n",
-    "numlist = numbers.split(\" \")\n",
-    "for i in range(len(numlist)):\n",
-    "    numlist[i] = int(numlist[i])\n",
+    "class Linked_list:\n",
     "    \n",
-    "for i in range(len(numlist)):\n",
-    "    for j in range(len(numlist)):\n",
-    "        print(numlist[j], end=\" \")\n",
-    "    a = numlist[0]\n",
-    "    for j in range(len(numlist)):\n",
-    "        if j <= len(numlist) - 2:\n",
-    "            numlist[j] = numlist[j+ 1]\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.tail = None\n",
+    "        self.d_size = 0\n",
+    "        \n",
+    "    def empty(self):\n",
+    "        if self.d_size == 0:\n",
+    "            return True\n",
     "        else:\n",
-    "            numlist[j] = a\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gcd(n, m):\n",
-    "\n",
-    "    a = [i for i in range(1,n+1) if i % n == 0]\n",
-    "    b = [i for i in range(1,m+1) if i % n == 0]\n",
+    "            return False\n",
+    "        \n",
+    "    def size(self):\n",
+    "        return self.d_size\n",
     "    \n",
-    "    return max(list(set(a) & set(b)))\n",
-    "def lcm(n, m):\n",
-    "    return n * m / gcd(n,m)\n"
+    "    def append(self, dat):\n",
+    "        new_node = Node(data)\n",
+    "        \n",
+    "        if self.empety():\n",
+    "            self.head = new_node\n",
+    "            self.tail = new_node\n",
+    "            self.d_szie += 1\n",
+    "            \n",
+    "        else:\n",
+    "            self.tail.next = new_node\n",
+    "            self.tail = new_node\n",
+    "            self.d_size += 1\n",
+    "            \n",
+    "    def search_taraget(self, target, start = 0):\n",
+    "        \n",
+    "        if empty():\n",
+    "            return None\n",
+    "        \n",
+    "        pos = 0\n",
+    "        cur = self.head\n",
+    "        \n",
+    "        if pos >= start and target == cur.data:\n",
+    "            return cur.data, pos\n",
+    "        \n",
+    "        while cur.next:\n",
+    "            pos += 1\n",
+    "            cur = cur.next\n",
+    "            if pos >= start and target == cur.data:\n",
+    "                return cur.data, pos\n",
+    "            \n",
+    "        return None, None\n",
+    "    \n",
+    "    def search_pos(self, pos):\n",
+    "        \n",
+    "        if pos > self.size() - 1:\n",
+    "            return None\n",
+    "        \n",
+    "        cnt = 0\n",
+    "        cur = self.head\n",
+    "        if cnt == pos:\n",
+    "            return cur.data\n",
+    "        \n",
+    "        while cnt < pos:\n",
+    "            cur = cur.next\n",
+    "            cnt += 1\n",
+    "        \n",
+    "        return cur.data\n",
+    "    \n",
+    "    def remove(self, target):\n",
+    "        if self.empty():\n",
+    "            return None\n",
+    "        \n",
+    "        bef = self.head\n",
+    "        cur = self.head\n",
+    "        \n",
+    "        if target == cur.data:\n",
+    "            if self.size() == 1:\n",
+    "                self.head = None\n",
+    "                self.tail = None\n",
+    "                \n",
+    "            else:\n",
+    "                self.head = self.head.next\n",
+    "            self.d_size -= 1\n",
+    "            return cur.data\n",
+    "            \n",
+    "        while cur.next:\n",
+    "            bef = cur\n",
+    "            cur = cur.next\n",
+    "            if target == cur.data:\n",
+    "                if cur == self.tail:\n",
+    "                    self.tail =bef\n",
+    "                    \n",
+    "                else:\n",
+    "                    bef.next = cur.next\n",
+    "                    self.d_size -= 1\n",
+    "                    return cur.data\n",
+    "                \n",
+    "        return None\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def lcm(n, m):\n",
-    "    return n * m / gcd(n,m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36.0"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gcd(n, m):\n",
-    "    gcd_list = []\n",
-    "    for i in range(1, max(n, m)):\n",
-    "        if n % i == 0 and m % i == 0:\n",
-    "            gcd_list.append(i)\n",
-    "    return max(gcd_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gcd(12,36)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2333416668"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def isMulThree(n):\n",
-    "    return n % 3 == 0\n",
-    "def isMulFive(n):\n",
-    "    return n % 5 == 0\n",
-    "\n",
-    "sum(list([i for i in range(1,100001) if isMulThree(i) or isMulFive(i)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#216 정수 n을 입력 받았을 때, 1부터 n까지의 정수에 나오는 1의 총 개수를 구하는 프로그램을 구하시오.\n",
-    "\n",
-    "#ex) n = 4 일 때, 결과는 1 (1, 2, 3, 4중 1은 1개)\n",
-    "#ex) n = 13일 때, 결과는 6(1~13중 1은 5개)\n",
-    "#ex) n = 25일 때, 결과는 12\n",
-    "\n",
-    "def one_count(n):\n",
-    "    a = 0\n",
-    "    for i in range(n):\n",
-    "        if \"1\" in str(i):\n",
-    "            a += 1\n",
-    "    return a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "one_count(13)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#219 모든 분수는 유한소수나 순환마디를 갖는 무한소수로 표현된다. \n",
-    "# 예를들어, 1/8 은 0.125의 유한소수이며, 1/7은 순환마디가 142857인 순환하는 무한소수이다.\n",
-    "\n",
-    "# 1부터 100까지의 N에 대하여 fun_recurring(N)은 1/N의 순환마디를 구하는 함수이다.\n",
-    "# 만약, 1/N이 유한 소수이면 0을 리턴하고, 무한소수이면 순환마디를 구하여 리턴한다. fun_recurring(N)함수를 작성하시오\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fun_recurring(n):\n",
-    "    nstr = str(1/n)[2:]\n",
-    "    if len(nstr) <= 10:\n",
-    "        print(\"Not a recurring\")\n",
-    "    else:\n",
-    "        rec = \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.14285714285714285"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.125"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
