feat: added p and y counting

--- a/fun_coding/Programmers/2020카카오_문자열압축.ipynb
+++ b/fun_coding/Programmers/2020카카오_문자열압축.ipynb
@@ -881,10 +881,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5 µs, sys: 2 µs, total: 7 µs\n",
+      "Wall time: 11.9 µs\n",
+      "7\n",
+      "9\n",
+      "8\n",
+      "14\n",
+      "17\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
+    "%time\n",
     "# 다른사람 풀이인데 한번 해보자\n",
     "def compress(text, tok_len):\n",
     "    words = [text[i:i+tok_len] for i in range(0, len(text), tok_len)]\n",
@@ -902,7 +918,6 @@
     "\n",
     "def solution(text):\n",
     "    return min(compress(text, tok_len) for tok_len in list(range(1, int(len(text)/2) + 1)) + [len(text)])\n",
-    "\n",
     "a = [\n",
     "    \"aabbaccc\",\n",
     "    \"ababcdcdababcdcd\",\n",
@@ -912,6 +927,7 @@
     "\n",
     "    'aaaaaa',\n",
     "]\n",
+    "\n",
     "\n",
     "for x in a:\n",
     "    print(solution(x))"
