--- a/fun_coding/Programmers/2016_date찾기.ipynb
+++ b/fun_coding/Programmers/2016_date찾기.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\".././imgs/2016.png\" width=\"60%\">\n"
+    "<img src=\".././imgs/2016.png\" width=\"60%\">"
    ]
   },
   {
