feat: added 자연수뒤집어배열로만들기

--- a/fun_coding/Programmers/자연수뒤집어배열로만들기.ipynb
+++ b/fun_coding/Programmers/자연수뒤집어배열로만들기.ipynb
@@ -4,17 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\".././imgs/x만큼.png\" width=\"60%\">"
+    "<img src=\".././imgs/자연수뒤집여배열로.png\" width=\"60%\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(x, n):\n",
-    "    return [i*x for i in range(1, n+1)]"
+    "#내풀이\n",
+    "def solution(n):\n",
+    "    n = list(str(n))[::-1]\n",
+    "    return list(map(int,n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(12345)"
    ]
   },
   {
@@ -22,7 +44,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#다른사람 풀이\n",
+    "def digit_reverse(n):\n",
+    "    return list(map(int, reversed(str(n))))"
+   ]
   }
  ],
  "metadata": {
