feat: added 제일작은수제거

--- a/fun_coding/Programmers/제일작은수제거.ipynb
+++ b/fun_coding/Programmers/제일작은수제거.ipynb
@@ -1,59 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\".././imgs/제일작은수제거.png\" width=\"60%\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def(N, r, c):\n",
-    "    "
+    "# 내 풀이\n",
+    "def solution(arr):\n",
+    "    arr.remove(min(arr))\n",
+    "    return [-1] if len(arr) ==0 else arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "array = [[0] * (2**N) for i in range(2**N)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "결과 [] \n"
+     ]
     }
    ],
    "source": [
-    "array"
+    "def rm_small(mylist):\n",
+    "    return [i for i in mylist if i > min(mylist)]\n",
+    "\n",
+    "# 아래는 테스트로 출력해 보기 위한 코드입니다.\n",
+    "my_list = [1]\n",
+    "print(\"결과 {} \".format(rm_small(my_list)))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
