feat: modified 1,2,3 summation

--- a/fun_coding/백준/Untitled.ipynb
+++ b/fun_coding/백준/Untitled.ipynb
@@ -13,9 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "7\n",
+      "7\n",
+      "44\n",
+      "10\n",
+      "274\n"
+     ]
+    }
+   ],
    "source": [
     "def solution(n):\n",
     "    arr = [0]*(n+4)\n",
@@ -24,33 +38,36 @@
     "    arr[2] = 2\n",
     "    arr[3] = 4\n",
     "    \n",
-    "    \n",
+    "\n",
     "    for i in range(4, n+1):\n",
-    "        arr[n] = arr[n-3] + arr[n-2] + arr[n-1]\n",
-    "    \n",
+    "        arr[i] = arr[i-3] + arr[i-2] + arr[i-1]\n",
+    "\n",
     "    return arr[n]\n",
-    "    \n",
+    "a = int(input())\n",
+    "for _ in range(a):\n",
+    "    n = int(input())\n",
+    "    print(solution(n))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "274"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution(4)"
+    "solution(10)"
    ]
   },
   {
