feat: modified baekjoon problems

--- a/fun_coding/백준/암호만들기.ipynb
+++ b/fun_coding/백준/암호만들기.ipynb
@@ -9,6 +9,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string = [\"a\", \"t\", \"c\", \"i\", \"s\", \"w\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L, c = map(str, input().split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a c i s t w\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = list(input().split(\" \"))\n",
+    "array.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'c', 'i', 's', 't', 'w']"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀었다 와 ㅋㅋ\n",
+    "def solution(code, co, vo, idx, L, c):\n",
+    "    if co + vo == L:\n",
+    "        if co >= 2 and vo >=1:\n",
+    "            print(code)\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(idx, c):\n",
+    "        addchar = array[i]\n",
+    "        if addchar in [\"a\", \"e\", \"i\", \"o\", \"u\"]:\n",
+    "            solution(code+addchar,co,vo+1,i+1,L,c)\n",
+    "        else:\n",
+    "            solution(code+addchar,co+1,vo,i+1,L,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "acis\n",
+      "acit\n",
+      "aciw\n",
+      "acst\n",
+      "acsw\n",
+      "actw\n",
+      "aist\n",
+      "aisw\n",
+      "aitw\n",
+      "astw\n",
+      "cist\n",
+      "cisw\n",
+      "citw\n",
+      "istw\n"
+     ]
+    }
+   ],
+   "source": [
+    "solution(\"\",0,0,0,4,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
