--- a/fun_coding/백준/치킨쿠폰.ipynb
+++ b/fun_coding/백준/치킨쿠폰.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 5\n",
-      "124\n"
+      "101 5\n",
+      "125\n"
      ]
     }
    ],
@@ -34,6 +34,51 @@
     "n, k = map(int, input().split())\n",
     "print(solution(n,k))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 5\n",
+      "126\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chicken(n, k, d):\n",
+    "    if n<1:\n",
+    "        return 0\n",
+    "    return n+chicken((n+d)//k, k, (n+d)%k)\n",
+    "\n",
+    "n, k = map(int, input().split())\n",
+    "print(chicken(n, k, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
