--- a/fun_coding/백준/1,2,3 더하기.ipynb
+++ b/fun_coding/백준/1,2,3 더하기.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -32,19 +32,19 @@
    ],
    "source": [
     "def solution(n):\n",
-    "    arr = [0]*(n+4)\n",
+    "    arr = [0]*(n+1)\n",
     "    arr[0] = 0\n",
     "    arr[1] = 1\n",
     "    arr[2] = 2\n",
     "    arr[3] = 4\n",
-    "    \n",
+    "\n",
     "\n",
     "    for i in range(4, n+1):\n",
     "        arr[i] = arr[i-3] + arr[i-2] + arr[i-1]\n",
     "\n",
     "    return arr[n]\n",
     "a = int(input())\n",
-    "for _ in range(a):\n",
+    "for i in range(a):\n",
     "    n = int(input())\n",
     "    print(solution(n))\n",
     "    "
