feat: modified: 균형잡힌세상

--- a/fun_coding/백준/균형잡힌세상.ipynb
+++ b/fun_coding/백준/균형잡힌세상.ipynb
@@ -69,10 +69,10 @@
     }
    ],
    "source": [
-    "a = [\"[\", \"(\"]\n",
-    "b = [\"]\", \")\"]\n",
-    "dict_ls = {\")\":\"(\", \"]\":\"[\"}\n",
     "while True:\n",
+    "    a = [\"[\", \"(\"]\n",
+    "    b = [\"]\", \")\"]\n",
+    "    dict_ls = {\")\":\"(\", \"]\":\"[\"}\n",
     "    s = input()\n",
     "    if s==\".\":\n",
     "        break\n",
@@ -114,10 +114,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " .\n",
+      "yes\n",
+      " [\n",
+      "no\n",
+      ".\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [\"[\", \"(\"]\n",
+    "b = [\"]\", \")\"]\n",
+    "dict_ls = {\")\":\"(\", \"]\":\"[\"}\n",
+    "while True:\n",
+    "    s = input()\n",
+    "    if s==\".\":\n",
+    "        break\n",
+    "    c = []\n",
+    "    answer = True\n",
+    "    for i in s:\n",
+    "        if i in a:\n",
+    "            c.append(i)\n",
+    "        elif i in b:\n",
+    "            if len(c) == 0:\n",
+    "                answer = False\n",
+    "                break\n",
+    "\n",
+    "            elif c[-1] == dict_ls[i]:\n",
+    "                c.pop()\n",
+    "\n",
+    "            else:\n",
+    "                answer = False\n",
+    "                break\n",
+    "    if answer == True and len(c) == 0:\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")"
+   ]
   },
   {
    "cell_type": "code",
