--- a/fun_coding/백준/바이러스1.ipynb
+++ b/fun_coding/백준/바이러스1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./imgs/바이러스.png\" width=\"60%\">"
+    "<img src=\"./imgs/바이러스1.png\" width=\"60%\">"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
