--- a/fun_coding/백준/프린터큐.ipynb
+++ b/fun_coding/백준/프린터큐.ipynb
@@ -29,6 +29,168 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "6 0\n",
+      "1 1 9 1 1 1\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "case = int(input())\n",
+    "\n",
+    "for i in range(case):\n",
+    "    N, M = map(int, input().split())\n",
+    "    print_list = list(map(int, input().split()))\n",
+    "    priority_level = []\n",
+    "    \n",
+    "    for i in print_list:\n",
+    "        priority_level.append(i)\n",
+    "\n",
+    "    result = [0 for i in range(N)]\n",
+    "    queue = [i for i in range(N)]\n",
+    "    sequence = 1\n",
+    "    \n",
+    "    while queue:\n",
+    "        if print_list[queue[0]] == max(priority_level):\n",
+    "            priority_level.remove(max(priority_level))\n",
+    "            result[queue.pop(0)] = sequence\n",
+    "            sequence += 1\n",
+    "        else:\n",
+    "            queue.append(queue.pop(0))\n",
+    "    print(result[M])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 9, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priority_level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [0, 0, 0, 0, 0, 0]\n",
+    "b = [1, 2, 3, 4, 5, 6]\n",
+    "c = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[b.pop(0)] = c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -51,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
