--- a/fun_coding/백준/프린터큐.ipynb
+++ b/fun_coding/백준/프린터큐.ipynb
@@ -50,14 +50,14 @@
     "    N, M = map(int, input().split())\n",
     "    print_list = list(map(int, input().split()))\n",
     "    priority_level = []\n",
-    "    \n",
+    "  \n",
     "    for i in print_list:\n",
     "        priority_level.append(i)\n",
     "\n",
     "    result = [0 for i in range(N)]\n",
     "    queue = [i for i in range(N)]\n",
     "    sequence = 1\n",
-    "    \n",
+    "\n",
     "    while queue:\n",
     "        if print_list[queue[0]] == max(priority_level):\n",
     "            priority_level.remove(max(priority_level))\n",
@@ -65,8 +65,7 @@
     "            sequence += 1\n",
     "        else:\n",
     "            queue.append(queue.pop(0))\n",
-    "    print(result[M])\n",
-    "    "
+    "    print(result[M])\n"
    ]
   },
   {
@@ -151,43 +150,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a = [0, 0, 0, 0, 0, 0]\n",
-    "b = [1, 2, 3, 4, 5, 6]\n",
-    "c = 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a[b.pop(0)] = c"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -213,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
