feat: added 프린터큐(인중님풀이)

--- a/fun_coding/백준/바이러스1.ipynb
+++ b/fun_coding/백준/바이러스1.ipynb
@@ -16,69 +16,8 @@
     "# 위의 예제처럼 연결시키면 된다.\n",
     "# 처음줄, 컴퓨터의 수\n",
     "# 두번째줄, 총 몇쌍이 연결되어있는지, 이번 케이스의 경우 6쌍이 연결되어있다.\n",
-    "# 출력은 총 몇대가 1번으로부터 감염되었는지 출력한다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n",
-      "6\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-0f0c5a998d36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcomputer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mnetwork\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mvirus_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
-     ]
-    }
-   ],
-   "source": [
-    "computer = int(input())\n",
-    "network = int(input())\n",
-    "array = [list(map(int, input().split())) for i in range(6)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2\n",
-      "2 3\n",
-      "1 5\n",
-      "5 2\n",
-      "5 6\n",
-      "4 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "array = [list(map(int, input().split())) for i in range(6)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = {array[i][0]:[array[i][1]] for i in range(len(array))}"
+    "# 출력은 총 몇대가 1번으로부터 감염되었는지 출력한다.\n",
+    "# 맨마지막장에 답"
    ]
   },
   {
@@ -427,7 +366,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 인중님 풀이\n",
+    "\n",
+    "cycle = 0\n",
+    "count = 0\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "queue = list(enumerate(map(int, input().split())))\n",
+    "\n",
+    "\n",
+    "print(\"초기 상황: \", queue)\n",
+    "while cycle <= 10:\n",
+    "    cycle += 1\n",
+    "    paper = queue.pop(0)\n",
+    "    max_priority = max(queue, key=lambda x : x[1])[1]\n",
+    "    if paper[1] >= max_priority:\n",
+    "        count += 1\n",
+    "        if paper[0] == M:\n",
+    "            print(count, \"번째로 출력되었습니다.\")\n",
+    "            break\n",
+    "    else:\n",
+    "        queue.append(paper)\n",
+    "    print(cycle, \"번째 상황: \", queue)"
+   ]
   }
  ],
  "metadata": {
