feat: added injoong's solution Virus

--- a/fun_coding/백준/프린터큐.ipynb
+++ b/fun_coding/백준/프린터큐.ipynb
@@ -160,7 +160,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 인중님 풀이\n",
+    "\n",
+    "cycle = 0\n",
+    "count = 0\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "queue = list(enumerate(map(int, input().split())))\n",
+    "\n",
+    "\n",
+    "print(\"초기 상황: \", queue)\n",
+    "while cycle <= 10:\n",
+    "    cycle += 1\n",
+    "    paper = queue.pop(0)\n",
+    "    max_priority = max(queue, key=lambda x : x[1])[1]\n",
+    "    if paper[1] >= max_priority:\n",
+    "        count += 1\n",
+    "        if paper[0] == M:\n",
+    "            print(count, \"번째로 출력되었습니다.\")\n",
+    "            break\n",
+    "    else:\n",
+    "        queue.append(paper)\n",
+    "    print(cycle, \"번째 상황: \", queue)"
+   ]
   },
   {
    "cell_type": "code",
