--- a/fun_coding/백준/바이러스1.ipynb
+++ b/fun_coding/백준/바이러스1.ipynb
@@ -134,9 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'computer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-bd91354c0fbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdict_array\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcomputer\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mdict_array\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'computer' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dict_array = {}\n",
     "for i in range(1,computer+1):\n",
@@ -366,29 +378,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 인중님 풀이\n",
+    "computerCount = int(input())\n",
+    "networkCount = int(input())\n",
     "\n",
-    "cycle = 0\n",
-    "count = 0\n",
+    "network = dict()\n",
+    "warm_computer = set()\n",
     "\n",
-    "N, M = map(int, input().split())\n",
-    "queue = list(enumerate(map(int, input().split())))\n",
+    "for idx in range(1, computerCount+1):\n",
+    "    network[idx] = set()\n",
     "\n",
+    "for _ in range(networkCount):\n",
+    "    left, right = map(int, input().split())\n",
+    "    network[left].add(right)\n",
+    "    network[right].add(left)\n",
     "\n",
-    "print(\"초기 상황: \", queue)\n",
-    "while cycle <= 10:\n",
-    "    cycle += 1\n",
-    "    paper = queue.pop(0)\n",
-    "    max_priority = max(queue, key=lambda x : x[1])[1]\n",
-    "    if paper[1] >= max_priority:\n",
-    "        count += 1\n",
-    "        if paper[0] == M:\n",
-    "            print(count, \"번째로 출력되었습니다.\")\n",
-    "            break\n",
+    "# print(network)\n",
+    "\n",
+    "def warmvirus(idx):\n",
+    "    global warm_computer\n",
+    "    warm_computer.add(idx)\n",
+    "    if network[idx].issubset(warm_computer):\n",
+    "        # print(\"이미 모든 연결된 컴퓨터가 감염되었습니다.\")\n",
+    "        return\n",
     "    else:\n",
-    "        queue.append(paper)\n",
-    "    print(cycle, \"번째 상황: \", queue)"
+    "        warm_computer = warm_computer.union(network[idx])\n",
+    "        # print(\"현재까지 웜바이러스에 걸린 컴퓨터들:\", warm_computer)\n",
+    "        for i in network[idx]:\n",
+    "            # print()\n",
+    "            # print(i, \"번 컴퓨터에 의한 감염\", sep=\"\")\n",
+    "            warmvirus(i)\n",
+    "\n",
+    "\n",
+    "warmvirus(1)\n",
+    "print(warm_computer)"
    ]
   }
  ],
